<resources>
    <string name="app_name">Mi Control</string>
    <string name="open_nav">Abrir Menu de Navegacion</string>
    <string name="close_nav">Cerrar Menu de Navegacion</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenida">Bienvenida Tania</string>
    <string name="creadopor">Creado por AlonsoCorporationDB</string>
    <string name="inicio">Inicio</string>
    <string name="servicios">Servicios</string>
    <string name="citas">Citas</string>
    <string name="talleres">Talleres</string>
    <string name="inventario">Inventario</string>
    <string name="ventas">Ventas</string>
    <string name="perfil">Perfil</string>
    <string name="acercaDe">Acerca De</string>
    <string name="descripcion">Es una aplicación creada para la agenda de citas, almacenar los servicios que se ofrecen, así como los talleres impartidos. Cuenta con un inventario para un manejo y control de ventas, proporcionando cada detalle sobre cada venta que se ha realizado. Así como poder ver toda la información si en un futuro se requiere. La aplicación funciona sin internet y los datos se guardan en el teléfono.</string>
    <string name="menuServicios">Menu de Servicios</string>
    <string name="crearServicios">Crear Servicio</string>
    <string name="ingresaServicio">Ingresa el Servicio</string>
    <string name="ingresaPrecioServicio">Ingresa el Precio</string>
    <string name="ingresaPrecioVenta">Ingresa el Precio de Venta</string>
    <string name="ingresaPrecioCompra">Ingresa el Precio de Compra</string>
    <string name="editarServicio">Editar Servicio</string>
    <string name="ServiciosCreados">Servicios Creados</string>
    <string name="Ser">Servicio:  </string>
    <string name="Pre">Precio Venta:  </string>
    <string name="PreCOM">Precio Compra:  </string>
    <string name="ServicioCreadoCorrectamente">Servicio Creado Correctamente</string>
    <string name="AunNoTienesServicios">Aun no tienes Servicios</string>
    <string name="DeseasEliminarServicio">Deseas eliminar este Servicio?</string>
    <string name="ServicioModificado">Servicio Modificado</string>
    <string name="ErrorAlModificarServicio">Error al Modificar Servicio</string>
    <string name="ErrorAlAgregarServicio">Error al Agregar Servicio</string>
    <string name="si">Si</string>
    <string name="llenaLosDatosFaltantes">Llena los datos faltantes</string>
    <string name="AunNoTienesCitas">Aun no tienes Citas</string>
    <string name="NoTienesCitasEsteDia">No tienes Citas este dia</string>
    <string name="NOMBRE">Nombre: </string>
    <string name="TELEFONO">Telefono: </string>
    <string name="FECHA">Fecha: </string>
    <string name="HORA">Hora: </string>
    <string name="SERVICIO">Servicio: </string>
    <string name="crearCita">Crear Cita</string>
    <string name="escribeNombre">Escribe un Nombre</string>
    <string name="ingresaTelefono">Ingresa el Telefono</string>
    <string name="ingresaFecha">Ingresa la Fecha</string>
    <string name="ingresaHora">Ingresa la Hora</string>
    <string name="AunNoHasAgregadoServicios">Aun no has agregado Servicios</string>
    <string name="CitaGuardada">Cita Creada</string>
    <string name="ErrorCita">Error al Crear la Cita</string>
    <string name="EditarCita">Editar Cita</string>
    <string name="CitaModificada">Cita Modificada</string>
    <string name="ErrorModificarCita">Error al modificar la Cita</string>
    <string name="DeseasEliminarCita">Deseas Eliminar esta Cita?</string>
    <string name="HistorialCitas">Historial Citas</string>
    <string name="Hola">Hola</string>
    <string name="Tengounacitaprogramadael">Tengo una cita programada el</string>
    <string name="alas">a las</string>
    <string name="paraelservicio">para el servicio de</string>
    <string name="nosvemos">. Nos vemos pronto.</string>
    <string name="enviarCitaPorWhats">Enviar Cita por WhatsApp</string>
    <string name="deseasenviarcita">¿Deseas enviar esta Cita por WhatsApp?</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="recordatorio">Recordatorio de cita</string>
    <string name="tienescitaprogramada">Tienes una cita programada ahora.</string>
    <string name="menuTalleres">Menu de Talleres</string>
    <string name="crearTaller">Crear Taller</string>
    <string name="ingresaTitulo">Ingresa el Titulo</string>
    <string name="ingresaInformacion">Ingresa la Informacion</string>
    <string name="TallerCreadoCorrectamente">Taller Creado Correctamente</string>
    <string name="ErrorAlCrearTaller">Error al Crear Taller</string>
    <string name="EditarTaller">Editar Taller</string>
    <string name="AunNoTienesTalleres">Aun no tienes Talleres</string>
    <string name="WhatsappNoIntalado">WhatsApp no está instalado en tu dispositivo</string>
    <string name="ArchivoPdfCreadoCorrectamente">Archivo PDF creado correctamente</string>
    <string name="DeseasEnviarPDFPorWhats">¿Deseas enviar el PDF por WhatsApp?</string>
    <string name="PrecioEnPdf">Precio: $</string>
    <string name="CarpetaCreada">Carpeta Creada</string>
    <string name="EstePermisoEsNecesario">Este permiso es necesario para crear el archivo</string>
    <string name="PermisosConcedidos">Permisos Concedidos</string>
    <string name="EliminarTaller">Deseas Eliminar este Taller?</string>
    <string name="TallerModificadoCorrectamente">Taller Modificado</string>
    <string name="ErrorModificarTaller">Error al Modificar Taller</string>
    <string name="PermisosCancelados">Permisos Cancelados</string>
    <string name="TalleresCreados">Talleres Creados</string>
    <string name="menuInventario">Menu de Inventario</string>
    <string name="Productosconmenorescantidades">Productos con menores cantidades</string>
    <string name="AunNoTienesProductos">Aun no tienes Productos</string>
    <string name="PRODUCTO">Producto:</string>
    <string name="CODIGO">Codigo:</string>
    <string name="CANTIDAD">Cantidad:</string>
    <string name="crearProducto">Crear Producto</string>
    <string name="ingresaProducto">Ingresa el Producto</string>
    <string name="ingresaCantidad">Ingresa la Cantidad</string>
    <string name="ingresaCodigo">Ingresa el Codigo</string>
    <string name="ingresaCodigoNuevo">Nuevo Codigo</string>
    <string name="ProductoCreadoCorrectamente">Producto Guardado Correctamente</string>
    <string name="ErrorAlCrearProducto">Error al Crear Producto</string>
    <string name="editarProducto">Editar Producto</string>
    <string name="debesIngresarCantidad">Debes ingresar una cantidad</string>
    <string name="ProductoModificado">Producto Modificado</string>
    <string name="ErrorModificarProducto">Error al Modificar Producto</string>
    <string name="EliminarProducto">Deseas Eliminar este Producto?</string>
    <string name="ProductosCreados">Productos mas Vendidos</string>
    <string name="IngreseCantidadAdicional">Ingrese la cantidad adicional</string>
    <string name="CANT">Cantidad</string>
    <string name="aceptar">Aceptar</string>
    <string name="AunNoTienesVentas">Aun no tienes Ventas</string>
    <string name="NoTienesVentasEsteDia">No tienes ventas este día</string>
    <string name="folio">Folio:</string>
    <string name="CLIENTE">Cliente:</string>
    <string name="TOTAL">Total:</string>
    <string name="crearVenta">Crear Venta</string>
    <string name="seleccionaProducto">Selecciona un Producto</string>
    <string name="IngresaNombreCliente">Ingresa el Nombre del Cliente</string>
    <string name="AunNoHasAgregadoProductos">Aun no has agregado Productos</string>
    <string name="Product">Producto</string>
    <string name="Cantid">Cantidad</string>
    <string name="Prec">Precio</string>
    <string name="Tota">Total</string>
    <string name="VentaCreadaCorrectamente">Venta Creada Correctamente</string>
    <string name="ErrorCrearVenta">Error al Crear Venta</string>
    <string name="CantidadDe">Cantidad de</string>
    <string name="Agregar">Agregar</string>
    <string name="NoSeTieneEsaCantidadProducto">No se tiene esa Cantidad del Producto</string>
    <string name="CambiarCantidadDe">Cambiar Cantidad de</string>
    <string name="a">a:</string>
    <string name="Cambiar">Cambiar</string>
    <string name="editarVenta">Editar Venta</string>
    <string name="historialVentas">Historial Ventas</string>
    <string name="ingresosVentas">Ingresos de Ventas</string>
    <string name="VentaModificada">Venta Modificada</string>
    <string name="ErrorModificarVenta">Error al Modificar Venta</string>
    <string name="EliminarVenta">Deseas Eliminar esta Venta?</string>
    <string name="cancelado">Cancelado</string>
    <string name="lectoraCancelada">Lectora Cancelada</string>
    <string name="permisoCamaraDenegado">Permiso Camara Denegado</string>
    <string name="codigoNoCoincide">El código no coincide con ningún producto</string>
    <string name="codigoNoValido">El código no es válido, solo acepta numeros</string>
    <string name="INGRESOS">Ingresos</string>
    <string name="menuIngresos">Menu de Ingresos</string>
    <string name="IngresosCitas">Ingresos de Citas</string>
    <string name="GANANCIA">Ganancia:</string>
    <string name="CANTIDADALMACEN">Cantidad en Almacen:</string>
    <string name="SOLO_GANANCIAS">Solo Ganancias de ventas</string>
    <string name="GANANCIAS_TOTALES">Ganancias Generales</string>
    <string name="LENGUAJE">es</string>
    <string name="PAIS">MX</string>
    <string name="AUN_NO_HAS_CREADO_EL_PDF">Aún no has creado el PDF</string>
    <string name="ACCION">Accion</string>
    <string name="QUEACCIONDESEASREALIZAR">¿Qué acción deseas realizar?</string>
    <string name="ENVIARPORWHATS">Enviar por WhatsApp</string>
    <string name="VISUALIZARPDF">Visualizar PDF</string>
    <string name="NOSEENCONTROAPP">No se encontró ninguna aplicación para abrir el PDF</string>
    <string name="TICKET_VENTA">Ticket de Venta</string>
    <string name="FOLIOPDF">Folio:</string>
    <string name="GRACIASPORTUCOMPRA">Gracias por tu compra!</string>
    <string name="ENERO">Enero</string>
    <string name="FEBRERO">Febrero</string>
    <string name="MARZO">Marzo</string>
    <string name="ABRIL">Abril</string>
    <string name="MAYO">Mayo</string>
    <string name="JUNIO">Junio</string>
    <string name="JULIO">Julio</string>
    <string name="AGOSTO">Agosto</string>
    <string name="SEPTIEMBRE">Septiembre</string>
    <string name="OCTUBRE">Octubre</string>
    <string name="NOVIEMBRE">Noviembre</string>
    <string name="DICIEMBRE">Diciembre</string>
    <string name="COMPRAS">Compras</string>
    <string name="NoTienesComprasEsteDia">No tienes compras este día</string>
    <string name="crearCompra">Crear Compra</string>
    <string name="ingresaProveedor">Ingresa el Nombre del Proveedor</string>
    <string name="CompraCreadaCorrectamente">Compra Creada Correctamente</string>
    <string name="ErrorCrearCompra">Error al Crear Compra</string>
    <string name="Proveedor">Proveedor:</string>
    <string name="historialCompras">Historial Compras</string>
    <string name="AunNoTienesCompras">Aun no tienes Compras</string>
    <string name="egresosCompras">Egresos Compras</string>
    <string name="editarCompra">Editar Compra</string>
    <string name="CompraModificada">Compra Modificada</string>
    <string name="ErrorModificarCompra">Error al Modificar Compra</string>
    <string name="EliminarCompra">Deseas Eliminar esta Compra?</string>
    <string name="TICKET_COMPRA">Ticket de Compra</string>
    <string name="Cambio">Cambio:</string>
    <string name="Recibido">Recibido</string>
    <string name="entregado">Entregado</string>
    <string name="PR">Precio:</string>
    <string name="infoAdicional">Informacion Adicional</string>
    <string name="Descuento">Ingresa un Descuento</string>
    <string name="Desc">Descuento:</string>
    <string name="configuracion">Configuración</string>
</resources>