<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ver_p"
    android:background="@drawable/fondo_degradado"
    tools:context=".VerProducto">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="91dp"
        android:layout_marginTop="31dp"
        android:autoSizeTextType="uniform"
        android:text="@string/editarProducto"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/cod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/CODIGO"
        android:textColor="@color/white"
        android:layout_below="@+id/textView4"/>

    <EditText
        android:id="@+id/codigo"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_below="@+id/cod"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="-50dp"
        android:ems="10"
        android:hint="@string/ingresaCodigo"
        android:inputType="phone"
        android:text=""
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/pro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="55dp"
        android:text="@string/PRODUCTO"
        android:textColor="@color/white"
        android:layout_below="@+id/codigo"/>

    <EditText
        android:id="@+id/producto"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_below="@+id/pro"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="-50dp"
        android:ems="10"
        android:hint="@string/ingresaProducto"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="55dp"
        android:text="@string/Pre"
        android:textColor="@color/white"
        android:layout_below="@+id/producto"/>

    <EditText
        android:id="@+id/precio"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_below="@+id/ven"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/ingresaPrecioVenta"
        android:inputType="phone"
        android:text=""
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:text="@string/PreCOM"
        android:textColor="@color/white"
        android:layout_below="@+id/precio"/>

    <EditText
        android:id="@+id/precioCompra"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_below="@+id/com"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/ingresaPrecioCompra"
        android:inputType="phone"
        android:text=""
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:text="@string/Desc"
        android:textColor="@color/white"
        android:layout_below="@+id/precioCompra"/>

    <EditText
        android:id="@+id/descuento"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_below="@+id/des"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/Descuento"
        android:inputType="phone"
        android:text=""
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/can"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:text="@string/CANT"
        android:textColor="@color/white"
        android:layout_below="@+id/descuento"/>


    <EditText
        android:id="@+id/cantidad"
        android:layout_width="322dp"
        android:layout_height="48dp"
        android:layout_below="@+id/can"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/ingresaCantidad"
        android:inputType="phone"
        android:text=""
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp" />


    <ImageView
        android:id="@+id/imagenProducto"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_below="@+id/cantidad"
        android:layout_marginTop="2dp"
        android:layout_marginStart="30dp"
        android:src="@drawable/baseline_image_24" />


    <ImageButton
        android:id="@+id/añadir"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_below="@+id/cantidad"
        android:layout_marginStart="220dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/baseline_edit_24"
        />

    <ImageButton
        android:id="@+id/eliminar"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_below="@+id/cantidad"
        android:layout_marginStart="300dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/baseline_delete_24"
        />


    <ImageButton
        android:id="@+id/ingresarMas"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_below="@+id/cantidad"
        android:layout_marginStart="270dp"
        android:layout_marginTop="90dp"
        app:srcCompat="@drawable/baseline_add_shopping_cart_24"
        />


</RelativeLayout>