<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/inve"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ServiciosFragment"
    android:background="@drawable/fondo_degradado">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="45dp"
        android:text="@string/menuInventario"
        android:fontFamily="@font/montserrat"
        android:textColor="#E3E0E0"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/subtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="38dp"
        android:layout_below="@+id/titulo"
        android:text="@string/Productosconmenorescantidades"
        android:textColor="#E3E0E0"
        android:textSize="20sp" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/txtBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="Buscar servicios"
        android:layout_below="@id/subtitulo"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaProductos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomNavigationView"
        android:layout_below="@+id/subtitulo"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="-30dp" />

    <TextView
        android:id="@+id/txtNoProductos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/AunNoTienesProductos"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:visibility="gone" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/fondo_degradado"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu_productos" />


</RelativeLayout>